--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,23 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.feedContainer {
+    width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
 
-:root {
-    --bg-color: #18181b;
-    --wt-color: #ffffff;
-    --font: 3rem;
-    --font-mb: 3rem;
-    --font-sub: 2rem;
-    --font-sub-mb: 1.5rem;
+
+}
+
+.feedContainer::-webkit-scrollbar {
+    display: none;
     
 }
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+.feedContainer {
+    -ms-overflow-style:none;
+    scrollbar-width: none;
 }
 
-body {
-  background-color: var(--bg-color);
-  color: var(--wt-color);
-  font-family: 'Poppins', sans-serif;
+
+.title {
+    margin: 1rem;
+    font-weight: 700;
+    color: var(--wt-color);
+}
+
+@media screen and (max-width: 768px){
+    .feedContainer {
+        height: 100%;
+        overflow: hidden;
+    
+    }
 }
