--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,81 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+    --bg-color: #18181b;
+    --light-black: #16181c;
+    --wt-color: #ffffff;
+    --gray-color:#3a3d41;
+    --light-gray: #83868a;
+    --blue-color: #1a8bd7;
+
+    --font: 3rem;
+    --font-mb: 3rem;
+    --font-sub: 2rem;
+    --font-sub-mb: 1.5rem;
+    --font-sm: 0.8rem;
+    --font-sm-mb: 0.6rem;
+    --font-md: 0.9rem;
+    --font-md-mb: 0.8rem; 
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--wt-color);
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
+  
+    
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
 }
 
-* {
-  box-sizing: border-box;
+
+
+
+
+
+@keyframes fadeIn {
+  from { opacity: 0} to { opacity: 1; }
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+
+hr {
+  width: 100%;
+  height:1px;
+  border: 0.1px solid var(--gray-color); ;
+  color: var(--gray-color);
+  margin: 7px 0;
+}
+
+button {
+      
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
 }
