--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,8 @@
     width: 100%;
     height: 100vh;
     overflow-y: scroll;
-
+    border-right: 1px solid var(--gray-color);
+    border-left: 1px solid var(--gray-color);
 
 }
 
