--- a/components/GridLayout.module.css
+++ b/components/GridLayout.module.css
@@ -9,7 +9,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
     animation: fadeIn 0.3s ease-in-out;
 }
 
@@ -22,6 +21,7 @@
     grid-template-columns: 25% calc(50% - 2rem) 25%;
     grid-template-rows: 1fr;
     gap: 1rem;   
+    align-items: start;
 }
 
 
@@ -33,6 +33,8 @@
 
     .gridContainer > div:nth-of-type(2) {
         order: -1;
+        height: auto;
+        overflow-y: hidden;
         
     }
     
